--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -1,4 +1,13 @@
 <h1>My first web page</h1>
 <h2>Written with unicorn laughter</h2>
+
 <p> This is our first web page!</p>
 <p> Pretty rad NO?</p>
+
+<p>Here are some things I'm going to learn about coding:</p>
+
+<ul>
+  <li>HTML</li>
+  <li>CSS</li>
+  <li>JavaScript</li>
+</ul>
