--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -1,13 +1,25 @@
-<h1>My first web page</h1>
-<h2>Written with unicorn laughter</h2>
+<!DOCTYPE html>
 
-<p> This is our first web page!</p>
-<p> Pretty rad NO?</p>
+<html>
+  <head>
+    <title>Our Web Page Rules!</title>
+  </head>
 
-<p>Here are some things I'm going to learn about coding:</p>
+  <body>
 
-<ul>
-  <li>HTML</li>
-  <li>CSS</li>
-  <li>JavaScript</li>
-</ul>
+    <h1>My first web page</h1>
+    <h2>Written with unicorn laughter</h2>
+
+    <p> This is our first web page!</p>
+    <p> Pretty rad NO?</p>
+
+    <p>Here are some things I'm going to learn about coding:</p>
+
+    <ul>
+      <li>HTML</li>
+      <li>CSS</li>
+      <li>JavaScript</li>
+    </ul>
+
+  </body>
+</html>
