added Lucys favorite things

--- a/favorite-things.html
+++ b/favorite-things.html
@@ -16,11 +16,26 @@
     <ol>
       <li>God of Small Things</li>
       <li>Slapstick</li>
+    </ol>  
 
 
 
 
+  <h1>And some of the things that make Lucy happy...</h1>
 
+  <h2>Outdoors Stuff</h2>
+    <ul>
+      <li>Hiking</li>
+      <li>Biking</li>
+      <li>Dancing</li>
+    </ul>
+
+  <h2>Indoor Stuff</h2>
+    <ol>
+      <li>Listen to Music</li>
+      <li>Eat Food</li>
+
+    </ol>
 
 </body>
 </html>
